--- a/latex/refs.bib
+++ b/latex/refs.bib
@@ -307,8 +307,8 @@ inproceedings{Demme:2012:SVF:2337159.2337172,
 }
 @article{Binkert:2011:GS:2024716.2024718,
 	author = {Binkert, Nathan and Beckmann, Bradford and Black, Gabriel and Reinhardt, Steven K. and Saidi, Ali and Basu, Arkaprava and Hestness, Joel and Hower, Derek R. and Krishna, Tushar and Sardashti, Somayeh and Sen, Rathijit and Sewell, Korey and Shoaib, Muhammad and Vaish, Nilay and Hill, Mark D. and Wood, David A.},
-	title = {The Gem5 Simulator},
-	journal = {SIGARCH Comput. Archit. News},
+	title = {{The Gem5 Simulator}},
+   journal={ACM SIGARCH Computer Architecture News},
 	issue_date = {May 2011},
 	volume = {39},
 	number = {2},
@@ -323,6 +323,7 @@ inproceedings{Demme:2012:SVF:2337159.2337172,
 	publisher = {ACM},
 	address = {New York, NY, USA},
 }
+
 @misc{sesc,
 	Author = {Jose Renau and Basilio Fraguela and James Tuck and Wei Liu and Milos Prvulovic and Luis Ceze and Smruti Sarangi and Paul Sack and Karin Strauss and Pablo Montesinos},
 	Month = {January},
@@ -526,7 +527,7 @@ inproceedings{Demme:2012:SVF:2337159.2337172,
 
 @inproceedings {217605,
 	author = {Monjur Alam and Haider Adnan Khan and Moumita Dey and Nishith Sinha and Robert Callan and Alenka Zajic and Milos Prvulovic},
-	title = {One\&Done: A Single-Decryption EM-Based Attack on OpenSSL{\textquoteright}s Constant-Time Blinded {RSA}},
+	title = {{One\&Done: A Single-Decryption EM-Based Attack on OpenSSL{\textquoteright}s Constant-Time Blinded RSA}},
 	booktitle = {27th {USENIX} Security Symposium ({USENIX} Security 18)},
 	year = {2018},
 	isbn = {978-1-939133-04-5},
@@ -536,7 +537,7 @@ inproceedings{Demme:2012:SVF:2337159.2337172,
 	publisher = {{USENIX} Association},
 }
 @article{Balasch2015DPABA,
-	title={DPA, Bitslicing and Masking at 1 GHz},
+	title={{DPA, Bitslicing and Masking at 1 GHz}},
 	author={Josep Balasch and Benedikt Gierlichs and Oscar Reparaz and Ingrid Verbauwhede},
 	journal={IACR Cryptology ePrint Archive},
 	year={2015},
@@ -1092,8 +1093,8 @@ inproceedings{Demme:2012:SVF:2337159.2337172,
 
 @INPROCEEDINGS{Monjur21,
   author={Alam, Monjur and Yilmaz, Baki and Werner, Frank and Samwel, Niels and Zajic, Alenka and Genkin, Daniel and Yarom, Yuval and Prvulovic, Milos},
-  booktitle={2021 IEEE European Symposium on Security and Privacy (EuroS P)},
-  title={Nonce@Once: A Single-Trace EM Side Channel Attack on Several Constant-Time Elliptic Curve Implementations in Mobile Platforms},
+  booktitle={2021 IEEE European Symposium on Security and Privacy (EuroS\&P)},
+  title={{Nonce@Once: A Single-Trace EM Side Channel Attack on Several Constant-Time Elliptic Curve Implementations in Mobile Platforms}},
   year={2021},
   volume={},
   number={},
@@ -1519,3 +1520,11 @@ keywords = {DNA, Hybridization, DNA damage},
 abstract = {Two disposable electrochemical biosensors are described; the first one is useful for the detection of the hybridization of DNA and the second one is able to detect low-molecular weight compounds (toxins, pollutants, drugs) with affinity for nucleic acids. Synthetic single-stranded oligonucleotides have been immobilized onto graphite screen-printed electrodes using adsorption at a controlled potential. The probes were hybridized with different concentrations of the complementary sequences. The hybrids formed on the electrode surface were evaluated by chronopotentiometric stripping analysis using daunomycin hydrochloride as an indicator of the hybridization reaction. The DNA sensor was able to detect 0.2mgl−1 of a 21-base target sequence. The determination of low-molecular weight compounds with affinity for DNA was measured by their effect on the oxidation signal of the guanine peak of calf thymus immobilized on the electrode sensor and investigated by chronopotentiometric analysis. The DNA biosensor is able to detect known intercalating and groove binding compounds. Detection limits of 0.3, 0.2 and 10mgl−1 were obtained for daunomycin, polychlororinated biphenyls (PCBs) and aflatoxin B1, respectively. Applicability to river water samples was demonstrated.}
 }
 
+@inproceedings{esesc,
+title={{ESESC: A Fast Multicore Simulator Using Time-Based Sampling}},
+author={Ehsan K. Ardestani and Jose Renau},
+booktitle={19th International Conference on High Performance Computer Architecture (HPCA)},
+year={2013},
+month={Feb},
+doi={https://doi.org/10.1109/HPCA.2013.6522340},
+}
