Fixing red blocks from copy-edit branch

--- a/latex/proposed.tex
+++ b/latex/proposed.tex
@@ -27,12 +27,11 @@ In the rest of this section, we provide more detail on each of these research th
 With the scaled per-event signal snippets from training, we can construct the side channel signal that corresponds to longer-term program execution. This signal construction uses a microarchitecture-level cycle-accurate simulation to determine the times at which events occur in each of the processor's block-level parts (ALU, decoder, reservation stations, cache, etc.), and these per-block event timestamps are then used to combine per-event signal snippets into an overall simulated signal. 
 
 One of the key research problems for this thrust will be to explore the tradeoff between the accuracy of the generated signal and the level of detail in the cycle-accurate simulation.
-For example, in an L1 data cache we may lump all events (hit, lookup with miss, fill following a miss, etc.) into a single ``cache action''  category that is represented by a single snippet. This reduction in the level of detail would still allow the generated signal to capture the impact of the overall timeline of cache activity, e.g. having more prominent signals when executing code code regions with a lot of cache accesses, having low-signal-activity periods when the cache is not used (due to a processor stall between a miss and the corresponding fill), etc. However, these events would need to be differentiated to account for differences between reads and writes, to account for a lookup-miss having to initiate an access in the next-level cache while hits to not, etc.
+For example, in an L1 data cache we may lump all events (hit, lookup with miss, fill following a miss, etc.) into a single ``cache action''  category that is represented by a single snippet. This reduction in the level of detail would still allow the generated signal to capture the impact of the overall timeline of cache activity, e.g. having more prominent signals when executing code code regions with a lot of cache accesses, having low-signal-activity periods when the cache is not used (due to a processor stall between a miss and the corresponding fill), etc. However, these events would need to be differentiated to account for differences between reads and writes, to account for a lookup-miss having to initiate an access in the next-level cache while hits do not, etc.
 
 A similar tradeoff will be explored with respect to the impact of data values.
-We will start with data-value-agnostic simulation, which can still account for 
- e.g. secret-dependent control flow allowing attackers to
- extract secrets by identifying which part of the code is being executed.
+We will start with data-value-agnostic simulation, which can still model some attacks
+that exploit which code is executed, such as secret-dependent control flow.
 We will then add ability to obtain data-value statistics in cycle-accurate simulation,
 and leverage the signal envelopes produced by our symbolic circuit-level simulation, to identify events (and blocks) whose signal snippets are affected the most by data values.
 For such blocks/events, we will identify the nature of data-value dependency and construct data-value-dependent snippets, transformations, and weights to account for data-value dependencies in the signal. We will do this selectively (not for all events) because there is a tradeoff between accuracy and training/simulation time, so a given amoung of accuracy improvement will come at a lower cost (training/simulation time) when only the most data-value-dependent signal snippets are refined in this way.
