Updated to meet submission requirements, added PDFs of required documents

--- a/latex/description.tex
+++ b/latex/description.tex
@@ -133,7 +133,7 @@ While there are some tools and metrics to quantify analog side-channel leakage~\
 
 The PIs first attempt to address these challenges and develop microarchitecture-level analog side-channel model, was called EMSim~\cite{Nader2020}. That proof-of-concept study has shown that efficient, yet highly accurate, estimation of analog side channel signals is feasible, allowing modeling of numerous entire-program runs, e.g. to assess and improve leakage from a particular piece of code on a set of hardware platforms. EMSim was also the first model to asses leakage from a particular part of the system (when the goal is to make the design less ``leaky'') while maintaining the performance advantages of a cycle-accurate simulation relative to gate-level or physics-based models. However, while EMSim was good enough to demonstrate feasibility (and to serve as an excellent starting point for our proposed work, as will be discussed in Section~\ref{sec:proposed}), it used a number of simplifications that limit its accuracy and its ability to model more complex processors.
 
-\subsection{Proposed Research Work}
+\subsection{Summary of Proposed Research}
 To address these issues and allow analog side channels to be treated as first-class design considerations, we propose to develop methods that would allow microarchitecture-level simulation to generate highly accurate analog side channel signals, even for sophisticated processors (deep pipelines, superscalar, out-of-order). Specifically, the proposed research has four main thrusts:
 
 \begin{enumerate}[topsep=0pt,itemsep=0pt]
@@ -144,7 +144,7 @@ To address these issues and allow analog side channels to be treated as first-cl
 \end{enumerate}
 
  %If successful, our work will demonstrate the feasibility of modeling analog side-channels at the microarchitectural level and provide proof-of-concept integration of such modeling into a cycle-accurate simulator. This will allow analog side channels to become a first-class consideration, along with performance and power, in processor designs, allowing computer architects to avoid introducing significant new vulnerabilities and ``breaking'' existing software mitigation, and possibly even to reduce leakage and/or enable new mitigation. It would also allow programmers and even compilers to include analog side channel considerations in their tradeoff space during design and/or optimization.
-\subsection{Broader Impacts}
+\section{Broader Impacts}
 We expect that our results will help include analog side channels among early-design considerations, which will help reduce the cost of side-channel resistant designs by addressing side-channel-related problems early in the design process, when side-channel resilience may be improved (or preserved) with little or no sacrifice in performance, power, cost, weight, etc. The proposed work is inherently interdisciplinary, combining expertise in computer architecture and circuits, hardware security, electromagnetic, and signal processing. Thus this research has the potential to improve the state of the art and have broader impacts in all these areas. Also, participating students will be working in a truly multidisciplinary context, which will broaden their expertise in ways that are otherwise not possible. The proposal also includes 1) developing an interactive demonstrator for the general public, to educate and raise awareness about several key cybersecurity concepts and issues, 2) visits and activities in local schools to improve K-12 education, and to  encourage participation of women and minorities in STEM, 3) course and curriculum development activities at the undergraduate and graduate level, and 4) activities to broaden participation in computing (as discussed in our BPC plan).
 \section{Related Work}
 There is a large body of work focused on preventing specific side-channel attacks, e.g., ~\cite{Backes:2010:ASA:1929820.1929847,Nazari:2017:EED:3079856.3080223,Demme:2013:FOM:2485922.2485970,Han:2017:WMB:3133956.3134081,Liu:2016:CET:2976749.2978299,6987331,He:2017:SYC:3123939.3124546,217605,Monjur21}, either by removing the tie between sensitive information and the side-channel signal, or by
